Changes required to support null safety in Dart 2.12 and onwards.

--- a/src/main/resources/dart2-v3template/api_client.mustache
+++ b/src/main/resources/dart2-v3template/api_client.mustache
@@ -3,11 +3,7 @@ part of {{pubName}}.api;
 
 
 class LocalApiClient {
-
-  static final _regList = RegExp(r'^List<(.*)>$');
-  static final _regMap = RegExp(r'^Map<String,(.*)>$');
-
-  static dynamic serialize(Object value) {
+  static dynamic serialize(Object{{#nullSafe}}?{{/nullSafe}} value) {
     try {
       if (value == null) {
         return null;
@@ -44,7 +40,7 @@ return value.toString();
     }
   }
 
-  static dynamic deserializeFromString(String json, String targetType) {
+  static dynamic deserializeFromString(String{{#nullSafe}}?{{/nullSafe}} json, String targetType) {
     if (json == null) { // HTTP Code 204
       return null;
     }
@@ -54,11 +50,11 @@ return value.toString();
 
     if (targetType == 'String') return json;
 
-    var decodedJson = jsonDecode(json);
+    final decodedJson = jsonDecode(json);
     return deserialize(decodedJson, targetType);
   }
 
-  static dynamic deserialize(dynamic value, String targetType) {
+  static dynamic deserialize(dynamic{{#nullSafe}}?{{/nullSafe}} value, String targetType) {
     if (value == null) return null; // 204
     try {
       switch (targetType) {
@@ -86,19 +82,7 @@ return value.toString();
             return {{{enumName}}}Extension.fromJson(value);
         {{/x-internal-enums}}
         default:
-          {
-            Match match;
-            if (value is List &&
-                (match = _regList.firstMatch(targetType)) != null) {
-              var newTargetType = match[1];
-              return value.map((v) => deserialize(v, newTargetType)).toList();
-            } else if (value is Map &&
-                (match = _regMap.firstMatch(targetType)) != null) {
-              var newTargetType = match[1];
-              return Map.fromIterables(value.keys,
-                  value.values.map((v) => deserialize(v, newTargetType)));
-            }
-          }
+          return matchLeftovers(value, targetType, (v, t) => deserialize(v, t));
       }
     } on Exception catch (e, stack) {
       throw ApiException.withInner(500, 'Exception during deserialization.', e, stack);
@@ -108,7 +92,7 @@ return value.toString();
 
 
    /// Format the given parameter object into string.
-  static String parameterToString(dynamic value) {
+  static String parameterToString(dynamic{{#nullSafe}}?{{/nullSafe}} value) {
     if (value == null) {
       return '';
     } else if (value is DateTime) {
