--- a/src/main/resources/dart2-v3template/pubspec.mustache
+++ b/src/main/resources/dart2-v3template/pubspec.mustache
@@ -8,11 +8,24 @@ repository: {{{.}}}
 homepage: {{{.}}}
 {{/pubHomepage}}
 environment:
+{{#nullSafe}}
+  sdk: '>=2.12.0 <3.0.0'
+{{/nullSafe}}
+{{^nullSafe}}
   sdk: '>=2.7.0 <3.0.0'
+{{/nullSafe}}
 dependencies:
+{{#nullSafe}}
+  dio: '4.0.0-beta5'
+  openapi_dart_common:
+    path: '/Users/richard/projects/dart/openapi_dart_common'
+  collection: '^1.15.0'
+{{/nullSafe}}
+{{^nullSafe}}
   dio: '>=3.0.10 <4.0.0'
   openapi_dart_common: ^3.2.0
   collection: ^1.14.11
+{{/nullSafe}}
   {{#x-dart-deps}}
   {{{.}}}
   {{/x-dart-deps}}
