List<AnyOf<*>> support
+nullSafe
+ add enum class for discriminator
+ hide feature behind listAnyOf additional property flag
+ add setter for value along with discriminator field
+ fix _array_copy for NNBD when array is optional
+ nullsafe hashcode calculation
+ update openapi-codegen-version
+ test package generation
+ make it work under SampleRunner
+ add scenarios to k8s**

--- a/src/main/resources/dart2-v3template/apilib.mustache
+++ b/src/main/resources/dart2-v3template/apilib.mustache
@@ -24,3 +24,7 @@ part 'api_client.dart';
 {{#x-dart-parts}}
 part '{{{.}}}';
 {{/x-dart-parts}}
+
+{{#x-dart-anyparts}}
+part '{{{.}}}';
+{{/x-dart-anyparts}}
