--- a/src/main/resources/dart2-v3template/api_client.mustache
+++ b/src/main/resources/dart2-v3template/api_client.mustache
@@ -3,6 +3,10 @@ part of {{pubName}}.api;
 
 
 class LocalApiClient {
+{{^nullSafe}}
+  static final _regList = RegExp(r'^List<(.*)>$');
+  static final _regMap = RegExp(r'^Map<String,(.*)>$');
+{{/nullSafe}}
   static dynamic serialize(Object{{#nullSafe}}?{{/nullSafe}} value) {
     try {
       if (value == null) {
@@ -82,7 +86,24 @@ return value.toString();
             return {{{enumName}}}Extension.fromJson(value);
         {{/x-internal-enums}}
         default:
+{{^nullSafe}}
+  {
+            Match match;
+            if (value is List &&
+                (match = _regList.firstMatch(targetType)) != null) {
+              var newTargetType = match[1];
+              return value.map((v) => deserialize(v, newTargetType)).toList();
+            } else if (value is Map &&
+                (match = _regMap.firstMatch(targetType)) != null) {
+              var newTargetType = match[1];
+              return Map.fromIterables(value.keys,
+                  value.values.map((v) => deserialize(v, newTargetType)));
+            }
+          }
+{{/nullSafe}}
+{{#nullSafe}}
           return matchLeftovers(value, targetType, (v, t) => deserialize(v, t));
+{{/nullSafe}}
       }
     } on Exception catch (e, stack) {
       throw ApiException.withInner(500, 'Exception during deserialization.', e, stack);
