--- a/src/main/resources/dart2-v3template/_complex_copy.mustache
+++ b/src/main/resources/dart2-v3template/_complex_copy.mustache
@@ -1,1 +1,1 @@
-copy.{{{name}}} = ({{{name}}} == null) ? null : ((data) { return {{>_copy}}; }({{{name}}}));
+final _copy_{{{name}}} = ({{{name}}} == null) ? null : ((data) { return {{>_copy}}; }({{{name}}}));
